# convertNtoC

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: __init__.py  main.py  paths.py  server.py
app/api/: __init__.py  characters.py  episodes.py  memory.py  projects.py  settings.py  system.py
app/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini.py  util.py
app/services/: __init__.py  characters.py  memory.py  validation.py
app/storage/: __init__.py  config.py  db.py  files.py  keys.py  models.py  repository.py  vectors.py
docs/: DESIGN.md  ROADMAP.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Characters.tsx  Dashboard.tsx  Episodes.tsx  Memory.tsx  ProjectDetail.tsx  Settings.tsx  api.ts  ui.ts
packaging/: convertN2C.spec
