[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "convertn2c"
version = "0.0.0"
description = "Novel-to-comic desktop app (PyWebView + FastAPI, LLM=Claude)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pywebview>=5.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "ruff>=0.4",
    "httpx>=0.27",          # FastAPI TestClient
]

[tool.setuptools]
packages = ["app", "app.api", "app.llm", "app.services", "app.storage"]

[tool.ruff]
line-length = 100
target-version = "py310"
